# mystorev1

./: LICENSE  README.md  cabal.project  hie.yaml  project.cabal
app/: MyStore.hs
db/orders/1673367677/: accountId  orderDate  orderOverview
db/products/1673367541/: name
db/products/1673367608/: name
src/: FDatabaseConstants.hs  FDatabaseData.hs  FDatabaseUtils.hs  MyStoreConstants.hs  MyStoreData.hs  MyStoreLogic.hs  MyStoreUtils.hs
