Cabal-Version:        2.4
Name:                 haskell-my-store
Version:              0.1.0.0
Author:               DJ (JonkoXL)
Maintainer:           jonkoxl@gmail.com
Build-Type:           Simple
Copyright:            © 2023 DJ(JonkoXL)
License:              NONE
License-files:        LICENSE

library
  hs-source-dirs:     src
  exposed-modules:    FDatabaseConstants,
                      FDatabaseData,
                      FDatabaseUtils,
                      MyStoreConstants,
                      MyStoreData,
                      MyStoreLogic,
                      MyStoreUtils
  
  build-depends:      aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , text
                     , time

  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable MyStore
  hs-source-dirs:       app
  main-is:              MyStore.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  
  build-depends:      aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , directory
                     , text
                     , time
                     , haskell-my-store
            

